[package]
name = "crunch64-cli"
version = "0.6.0"
edition = "2024"
description = "A utility for compressing/decompressing files with common n64 formats"
repository = "https://github.com/decompals/crunch64"
license = "MIT"
rust-version = "1.89.0"

[[bin]]
name = "crunch64"
path = "src/main.rs"

[dependencies]
crunch64 = { version = "0.6.0", path = "../lib" }
clap = { version = "4.4.11", features = ["derive"] }
