[package]
name = "crunch64-cli"
version.workspace = true
edition.workspace = true
description = "A utility for compressing/decompressing files with common n64 formats"
repository.workspace = true
license .workspace = true
rust-version.workspace = true

[[bin]]
name = "crunch64"
path = "src/main.rs"

[dependencies]
crunch64 = { version = "0.5.4", path = "../lib" }
clap = { version = "4.4.11", features = ["derive"] }
