[package]
name = "crunch64"
# Version should be synced with lib/pyproject.toml and lib/crunch64/__init__.py
version = "0.6.0"
edition = "2024"
description = "A library for handling common compression formats for N64 games"
repository = "https://github.com/decompals/crunch64"
license = "MIT"
rust-version = "1.89.0"

[lib]
name = "crunch64"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
crc32fast = "1.4.2"
pyo3 = { version="0.25.1", features = ["extension-module"], optional = true }
thiserror = "2.0.16"

[dev-dependencies]
rstest = "0.26.1"

[features]
c_bindings = []
python_bindings = ["dep:pyo3"]
