[package]
name = "crunch64"
# Version should be synced with lib/pyproject.toml and lib/crunch64/__init__.py
version = "0.5.4"
edition = "2021"
description = "A library for handling common compression formats for N64 games"
repository = "https://github.com/decompals/crunch64"
license = "MIT"
rust-version = "1.74.0"
categories = ["no-std"]

[lib]
name = "crunch64"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
crc32fast = "1.4.2"
pyo3 = { version="0.23.5", features = ["extension-module"], optional = true }
thiserror = { version="2", default-features = false }

[dev-dependencies]
rstest = "0.18.2"

[features]
default = []

std = ["thiserror/std"]

c_bindings = []
python_bindings = ["dep:pyo3", "std"]
