[project]
name = "crunch64"
# Version should be synced with lib/Cargo.toml and lib/crunch64/__init__.py
version = "0.2.0"
description = "A library for handling common compression formats for N64 games"
requires-python = ">=3.7"
dependencies = [
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
"Homepage" = "https://github.com/decompals/crunch64"
"Bug Tracker" = "https://github.com/decompals/crunch64/issues"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module", "python_bindings"]
